--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,6 +11,7 @@ $bgColor: #e7f0f3;
 $brandBlue: #226d8d;
 $brandDarkBlue: #293142;
 $brandYellow: #d0c700;
+$bgNav: rgba(61, 61, 61, 0.7);
 $shadow: 2px 2px 10px rgba(0,0,0,0.5);
 $shadowClose: 0px 0px 0px rgba(0,0,0,0);
 $backGrad: to bottom right, $brandBlue, hsla(46, 100%, 93%, 1);
@@ -69,7 +70,7 @@ button {
     padding: 0.5rem 2.5rem;
     font-family: 'acumin-pro', Arial, 'Helvetica Neue', Helvetica, sans-serif;
     transition: all 0.3s ease-out;
-    border-radius: 15px;
+    border-radius: 10px;
 
 }
 
@@ -81,7 +82,7 @@ button {
 
   }
 
-#nextPage > button:hover > i {
+#nextPage > button:hover > i,  .helpUs > button:hover > i {
 
       color: $brandBlue;
 }
@@ -280,14 +281,25 @@ button {
 
     .insDiv {
 
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
         background-color: #d0c287;
         color: #3c3634;
-        border-radius: 25px;
+        border-radius: 15px;
         margin-left: -20px;
-        width: 76%;
-        padding-left: 1.5rem;
+        width: 67%;
+
         height: 3rem;
-        padding-top: 0.75rem;
+        padding:0;
+        padding-left: 1.5rem;
+
+        h3 {
+
+            margin:0;
+
+        }
 
         p {
 
@@ -401,6 +413,62 @@ button {
 }
 
 
+
+/*      ///////////////   Loading Screen   ////////////     */
+#loadContainer {
+
+    grid-column: 1 / 13;
+    grid-row: 1 / 11;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    z-index: 200; 
+    opacity: 1;
+
+}
+
+#loading {
+
+    width: 70%;
+    height: 5%;
+    z-index: 201; 
+    background-color: $brandYellow;
+    position: relative;
+
+}
+
+.loadbar {
+
+    width: 0%;
+    height: 100%; 
+    background-color: $brandBlue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: flicker 5s infinite;
+    overflow: hidden;
+    z-index: 300;
+
+}
+
+@keyframes gone {
+
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+
+.gone {
+
+    animation-name: gone;
+    animation-duration: 5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+
+}
+
+
+
+
   /*      ///////////////   Go Landscape   ////////////     */
 
 
@@ -421,20 +489,22 @@ button {
     grid-column: 1 / 13; 
     grid-row: 1 / 11; 
     z-index: 90; 
-    align-items: center; 
-    justify-content: space-around; 
+    align-items: flex-end;
+    justify-content: center;
 
 
     font-size: 1rem;
     padding: 0.5rem 2rem;
 
-    background-color: rgba(61, 61, 61, 0.7); 
+    background-color: $bgNav; 
     flex-direction: column;
     width: 100%; 
     height: 100%;
 
     a {
+
         margin: 0.4rem 0.2rem;
+
     }
 
 
@@ -983,7 +1053,7 @@ canvas {
     width: 100%;
     height: 100%;
     z-index: 50;
-    background-color: rgba(61, 61, 61, 0.7);
+    background-color: $bgNav;
     
 
 }
@@ -1501,7 +1571,7 @@ footer {
     height: 13vh;
     background-color: #d0c287;
     color: #3c3634;
-    border-radius: 30px;
+    border-radius: 15px;
     margin:0.125rem 0;
 
     img {
@@ -1690,30 +1760,33 @@ footer {
 
       a:hover {
 
-        color: $brandBlue;
+        color: $brandYellow;
 
       }
 
-      input {
+    input {
 
-          height: 7vh;
-          font-size: 0.75rem;
-          border: 1px solid #b8bab3;
-          display: block;
-          padding-left: 10px;
-          width: 100%;
-          transition: background-color 0.2s ease-out;
+        height: 7vh;
+        font-size: 0.75rem;
+        border: 1px solid #b8bab3;
+        display: block;
+        padding-left: 10px;
+        width: 100%;
+        border-radius: 10px;
+        transition: background-color 0.2s ease-out;
 
-      }
+    }
 
-      input::placeholder {
-          color: #b8bab3;
-      }
+    input::placeholder {
+        color: #b8bab3;
+    }
 
-      button {
-          padding: 0.5rem 1rem;
-          margin: .25rem 0 .125rem 0;
-      }
+    button {
+
+        padding: 0.5rem 1rem;
+        margin: .25rem 0 .125rem 0;
+
+    }
 
 
 
@@ -1749,6 +1822,16 @@ footer {
 
   }
 
+    #formFieldContainer {
+
+        border: 1px solid white;
+        border-radius: 10px;
+        padding: 0.5rem;
+        margin-top: 1rem;
+        background-color: rgba(255,255,255,0.3);
+
+    }
+
   .inputGroup {
 
       margin: 0;
@@ -1768,7 +1851,9 @@ footer {
       }
 
       :hover {
-          color: white;
+
+          color: $brandYellow;
+
       }
 
   }
@@ -2008,7 +2093,7 @@ footer {
   @keyframes fadeOutTwo {
 
       0%{opacity: 1; }
-      100%{opacity: 0; }
+      100%{opacity: 0;}
 
   }
 
@@ -2062,7 +2147,16 @@ footer {
 
   }
 
+  .fadeOutLong {
+      opacity:1;
+      animation-name: fadeOutTwo;
+      animation-duration: 1.5s;
+      animation-timing-function: ease-out;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+      animation-delay: 2s;
 
+  }
 
 
   /*   Full Page Transition   */
@@ -2086,6 +2180,8 @@ footer {
       animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
 
   }
+
+
 
 
   /*   /////////////////////    MEDIA QUERIES    /////////////////////   */
@@ -2138,7 +2234,7 @@ footer {
 
 
 
-  @media only screen and (min-width: 600px) and (orientation: landscape) {
+@media only screen and (min-width: 600px) and (orientation: landscape) {
 
 
       body {
@@ -2156,11 +2252,37 @@ footer {
 
 
 
-  }
+}
+
+
+@media only screen and (min-width: 800px) and (orientation: landscape) {
+
+
+
+    #wantToTry4 {
+
+        padding: 0 1rem;
+
+        h1 {
+
+            margin-top: 2rem;
+            font-size: 2rem;
+            line-height: 2rem;
+                    
+        }
+
+    }
+
+
+}
+
+
 
 
 
 @media only screen and (min-width: 1000px) and (orientation: landscape) {
+
+
 
     #introTextSm {
 
@@ -2211,6 +2333,84 @@ footer {
             line-height: 3rem;
             
         }
+
+    }
+
+
+    #stepsContent {
+
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
+        width: 100%;
+        margin: 5vh 0;
+
+    }
+
+    .stepsStyle {
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-direction: column;
+        width: 15vw;
+        min-height: 51vh;
+
+
+        img {
+            width: 120%;
+            margin-left: 20px;
+        }
+
+        h3 {
+
+            padding-top: 1rem;
+
+        }
+
+        p {
+            padding: 1rem;
+            padding-top: 0;
+            text-align: center;
+        }
+
+
+    }
+
+
+    .insDiv {
+
+        width: 55%;
+
+    }
+
+    #controls {
+
+        margin-left: 2rem;
+        margin-top: 3rem;
+    
+    }
+
+    #subscribe, #learn {
+
+        input {
+
+            height: 4.5vh;
+
+        }
+
+         button {
+
+            margin-top: 1.25rem;
+
+        }
+
+    }
+
+    .inputGroup {
+
+        margin-top: 0.75rem;
 
     }
 
@@ -2435,60 +2635,83 @@ footer {
 
 
 
-  @media only screen and (min-width: 1025px) and (orientation: landscape) {
+@media only screen and (min-width: 1025px) and (orientation: landscape) {
 
 
-      body {
-          font-size: 21px;
-      }
+    body {
+
+        font-size: 21px;
+
+    }
 
 
-      label {
+    label {
+
         margin-bottom: .5rem;
-      }
 
-      textarea {
-          font-size: 1rem;
-      }
+    }
 
+    textarea {
 
+        font-size: 1rem;
 
-      .fadeInT {
-          
-          margin-left: 7px;
-
-      }
-
-      #sorry {
-
-          grid-column: 4 / 10;
-          grid-row: 2 / 9;
-
-
-          input, textarea {
-              font-size: 1rem;
-              padding-left: 10px;
-          }
-
-          button {
-              border: 2px solid $brandBlue;
-          }
-
-      }
+    }
 
 
 
 
+
+    #sorry {
+
+        grid-column: 4 / 10;
+        grid-row: 2 / 9;
+
+        input, textarea {
+
+            font-size: 1rem;
+            padding-left: 10px;
+
+        }
+
+        button {
+
+            border: 2px solid $brandBlue;
+
+        }
+
+    }
 
 
 
       /* ////////////////   Navigation   ////////////// */
 
 
+    .navButton {
+
+        padding: 1.75rem;
+
+    }
 
     #nav::before {
 
         width: 30%;
+
+    }
+
+
+    /* ////////// */
+
+
+    .insDiv {
+
+        height: 4rem;
+
+    }
+
+    #controls {
+
+        margin-left: 3rem;
+        margin-top: 4rem;
 
     }
 
@@ -2520,17 +2743,42 @@ footer {
 
     }
 
+    #youStopped {
 
+        grid-row: 7 / 10;
+
+    }
+
+
+    #mainFour {
+
+        grid-column: 4 / 10;
+
+    }
 
     #wantToTry4 {
 
         h1 {
             
-            line-height: initial;            
+            line-height: 3.25rem;
+            margin-bottom: 1.5rem;            
           
         }
 
     }
+
+    #subscribe, #learn {
+
+
+        button {
+
+            margin-top: 1.75rem;
+
+        }
+
+    }
+    
+
 
 
 
@@ -2575,44 +2823,32 @@ footer {
       }
 
 
-      #share {
+    #share {
 
-          grid-column: 5 / 9;
-          grid-row: 2 / 5;
-          margin: 0 2vh;
+        grid-column: 5 / 9;
+        grid-row: 2 / 5;
+        margin: 0 2vh;
         
-      }
+    }
 
-      #subscribe {
+    #subscribe {
 
-          grid-column: 9 / 13; 
-          grid-row: 2 / 8;
-          margin: 0 2vh;
+        grid-column: 9 / 13; 
+        grid-row: 2 / 8;
+        margin: 0 2vh;
          
-      }
+    }
 
-      #learn {
+    #learn {
 
-          grid-column: 1 / 5;
-          grid-row: 2 / 6;
-          margin: 0 2vh;
+        grid-column: 1 / 5;
+        grid-row: 2 / 6;
+        margin: 0 2vh;
          
-      }
+    }
 
 
-
-  }
-
-
-
-
-
-
-
-
-
-
-
+}
 
 
 
@@ -2624,9 +2860,85 @@ footer {
 @media only screen and (orientation: landscape) {
 
     .navButton {
+
         font-size: 1.75rem;
+
     }
 
+
+}
+
+
+
+@media only screen and (min-width: 1280px) and (hover:hover) {
+
+    #nav {
+
+        display: flex;
+        flex-direction: row;
+        grid-column: 2 / 12;
+        grid-row: 9 / 10; 
+        align-items: flex-end;
+        justify-content: center;
+        background-color: transparent;
+
+    }
+
+    .navButton {
+
+        font-size: 1.25rem;
+        padding: 1.25rem;
+
+    }
+
+
+    #introTextSm {
+
+        font-size: 3.5rem;
+
+    }
+
+    #introTextLg {
+
+        font-size: 10rem;
+        margin: -4rem 0;
+
+    }
+
+    #youStopped {
+
+        grid-row: 4 / 8;
+
+    }
+
+    #mainFour {
+
+        grid-column: 3 / 11;
+
+    }
+
+    #wantToTry4 {
+
+        padding: 0;
+
+    }
+
+    #share, #subscribe, #learn {
+
+        grid-row: 1 / 5;
+        margin-top: 1rem;
+
+    }
+
+}
+
+@media only screen and (min-width: 1280px) and (hover:hover) {
+
+    #mainFour {
+
+        grid-column: 4 / 10;
+
+    }
 
 }
 
